Improved OVerflow hidden issue of TimeLine

--- a/styles.css
+++ b/styles.css
@@ -785,6 +785,11 @@ border-radius: 10px;
     -webkit-animation: expand 1s forwards;
 }
 
+#issues li p {
+  font-size: 12px;
+  line-height: 15px;
+}
+
 @-webkit-keyframes expand{
     0%{height:0px;opacity: 0;}
     100%{height:100vh;opacity: 1;}
